added top level package for two modules fixed tests